Added a Download list
Yea, idk lol

btw for dummies, you CAN'T Upload a file, these are my files.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </head>
 <body>
 <h1>Data-Up</h1>
-<p>Heres nothing, download using the link bar</p>
+<p>Heres nothing, go to the <a href="https://stngo.github.io/data-up/database/r/download_list.html">Download List</a>, to see more</p>
 </body>
 </html>
