Added file to Database
File: eve_encryptor.py.dwn

--- a/database/r/download_list.html
+++ b/database/r/download_list.html
@@ -3,7 +3,7 @@
 <head>
 <!-- HTML Codes by Quackit.com -->
 <title>
-Data Up - pref.json</title>
+Data Up - Download List</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="stngo, database, dataup, data up, data-up">
 <meta name="description" content="An database for an creator names stngo">
@@ -24,10 +24,15 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 			<td><strong>pref.json</strong></td>
 			<td><strong>&diams;<a href="https://stngo.github.io/data-up/database/r/pref_json.html" onclick="window.open(this.href, 'PREFJSON', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,fullscreen=no,scrollbars=no,dependent=no,width=500,left=960,height=350,top=540'); return false;">DOWNLOAD</a>&diams;</strong></td>
 		</tr>
+		<tr>
+			<td><strong>eve_encryptor.py</strong></td>
+			<td><strong>&diams;<a href="https://stngo.github.io/data-up/database/r/eve_encryptor_py.html" onclick="window.open(this.href, 'EVEENCRYPTORPY', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,fullscreen=no,scrollbars=no,dependent=no,width=500,left=960,height=350,top=540'); return false;">DOWNLOAD</a>&diams;</strong></td>
+		</tr>
 	</tbody>
 </table>
 
 <p>&nbsp;</p>
+
 
 
 </body>
