little update about the galaxy modpack html
read title lol

--- a/database/r/galaxy_modpack_exe.html
+++ b/database/r/galaxy_modpack_exe.html
@@ -3,7 +3,7 @@
 <head>
 <!-- HTML Codes by Quackit.com -->
 <title>
-Data Up - pref.json</title>
+Data Up - Galaxy City Modpack</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="stngo, database, dataup, data up, data-up">
 <meta name="description" content="An database for an creator names stngo">
@@ -15,8 +15,8 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </head>
 <body>
 
-<h1>Data-Up - PREFENCES.INI</h1>
-
+<h1>Data-Up - GALAXY CITY MODPACK</h1>
+<p>Password: 60mods</p>
 <p><a href="https://stngo.github.io/data-up/database/file/Galaxy City Modpack.exe">Download File</a></p>
 
 </body>
