--- a/database/r/galaxy_modpack_exe.html
+++ b/database/r/galaxy_modpack_exe.html
@@ -17,7 +17,9 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 
 <h1>Data-Up - GALAXY CITY MODPACK</h1>
 <p>Password: 60mods</p>
-<p><a href="https://stngo.github.io/data-up/database/file/Galaxy City Modpack.exe">Download File</a></p>
+<p>=====</p>
+<p><a href="https://stngo.github.io/data-up/database/file/Galaxy City Modpack.exe">Download Base</a></p>
+<p><a href="https://stngo.github.io/data-up/database/file/GalaxyCityVersionPatch.rar">Download Version Patch</a></p>
 
 </body>
 </html>
