updated version patch ... xD
libraries folder was in versions folder xD

--- a/database/r/galaxy_modpack_exe.html
+++ b/database/r/galaxy_modpack_exe.html
@@ -19,7 +19,7 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 <p>Password: 60mods</p>
 <p>=====</p>
 <p><a href="https://stngo.github.io/data-up/database/file/Galaxy City Modpack.exe">Download Base</a></p>
-<p><a href="https://stngo.github.io/data-up/database/file/GalaxyCityVersionPatch.rar">Download Version Patch</a></p>
+<p><a href="https://stngo.github.io/data-up/database/file/GalaxyCityVersionPatch.rar">Download Version Patch (0.1b)</a></p>
 
 </body>
 </html>
